// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Testring a la clase de Citas Actualizar cita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "11-06-2026",
      "hora": "10:30",
      "id": 1781164003834,
      "mascota": "Nuevo Nombre",
      "propietario": "Juan",
      "sintomas": "Solo duerme",
      "telefono": "3103607179",
    },
  ],
}
`;

exports[`Testring a la clase de Citas Agregar una nueva cita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "11-06-2026",
      "hora": "10:30",
      "id": 1781164003834,
      "mascota": "Luna",
      "propietario": "Juan",
      "sintomas": "Solo duerme",
      "telefono": "3103607179",
    },
  ],
}
`;

exports[`Testring a la clase de Citas Eliminar Cita 1`] = `
Citas {
  "citas": [],
}
`;
